--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<header>
 											<h2>Digital artist</h2>
 										</header>
-										<p>Experienced on the use of Photoshop, Blender and Piskel. Specialized on the creation of videogames assets and Pixel Art. </p>
+										<p>Specialised on the use of Photoshop, Blender and Piskel. Specialized on the creation of videogames assets and Pixel Art. </p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -75,7 +75,7 @@
 										<header>
 											<h2>Game Developer</h2>
 										</header>
-										<p>Highly skilled on the use of Unity Engine and the C# programming language. Experienced on the use of Game Maker, Godot and Rpg Maker.</p>
+										<p>Specialised on the use of Unity Engine and the C# programming language. With experience on the use of Game Maker, Godot and Rpg Maker.</p>
 									</section>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -84,7 +84,7 @@
 										<header>
 											<h2>Programmer</h2>
 										</header>
-										<p>Knowledgable on the use of C#, JavaScript, C++ and PHP. Experienced in the use of frameworks, such as: Angular JS, Laravel and ReactJS</p>
+										<p>Knowledgable on the use of C#, JavaScript, C++ and PHP. Specialised in the use of frameworks, such as: Angular JS, Laravel and ReactJS</p>
 									</section>
 								</div>
 							</div>
@@ -266,7 +266,7 @@
 														<h3>Technical Support</h3>
 														<p>An entire life surrounded by computers</p>
 													</header>
-													<p>Programming is not the only thing I love about computers, there are many other things that I like when it comes to work with a computer. I’m quite capable to manage a Linux / Windows server, I’m fond to Cybersecurity, currently I’m on my way for becoming an actual ethical hacker, I also love to design and assemble circuits, I am no stranger to Arduino or Raspberry Pi. Last but not least, I may fix your computer just for fun and as a break from so many hours of programming. </p>
+													<p>Programming is not the only thing I love about computers, there are many other things that I like when it comes to work with a computer. I’m quite capable to manage a Linux / Windows server, I’m fond to Cybersecurity, currently I’m on my way to becoming an actual ethical hacker, I also love to design and assemble circuits, I am no stranger to Arduino or Raspberry Pi. Last but not least, I may fix your computer just for fun and as a break from so many hours of programming. </p>
 													<footer>
 														<ul class="actions">
 															<li><a href="https://www.tinkercad.com/users/9n6gu3GwST6-zahuldmz?category=circuits&sort=likes&view_mode=default" class="button icon solid fas fa-bolt">See my circuits!</a></li>
