--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/favicon.ico" type="image/icon type">
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -25,7 +26,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Go to</a>
 									<ul>
 										<li><a href="#main">Portfolio</a></li>
 										<li><a href="#art">Art</a></li>
@@ -33,11 +34,11 @@
 										<li>
 											<a href="#footer">Social Media</a>
 											<ul>
-												<li><a href="#">GitHub</a></li>
-												<li><a href="#">Twitter</a></li>
-												<li><a href="#">Facebook</a></li>
-												<li><a href="#">Instagram</a></li>
-												<li><a href="#">Patreon</a></li>
+												<li><a href="https://github.com/Jackx201">GitHub</a></li>
+												<li><a href="https://twitter.com/Jackx201">Twitter</a></li>
+												<li><a href="https://www.facebook.com/zahul.dominguez">Facebook</a></li>
+												<li><a href="https://www.instagram.com/zdmz115/">Instagram</a></li>
+												<li><a href="https://www.patreon.com/jackx201">Patreon</a></li>
 											</ul>
 										</li>
 										<li><a href="mailto:zahuldmz@live.com">Send me an E-Mail</a></li>
@@ -148,6 +149,48 @@
 													<footer>
 														<ul class="actions">
 															<li><a href="https://jackx201.github.io/ToDoList-Responsive-Angular/" class="button alt">Try this app!</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="https://oakwoodacademywebmanager.000webhostapp.com/" class="image featured"><img src="images/school.jpg" alt="" /></a>
+													<header>
+														<h3>CRUD Application</h3>
+													</header>
+													<p>Welcome to Oakwood’s academy! This is a web application made with Laravel, Bootstrap and MySQL that simulates a scholar manager from the point of view of three users: students, teachers and administrators.</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="https://oakwoodacademywebmanager.000webhostapp.com/" class="button alt">Try this app!</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="https://jackx201.github.io/TicTacToe_Angular/" class="image featured"><img src="images/tictactoe.jpg" alt="" /></a>
+													<header>
+														<h3>Tic Tac Toe</h3>
+													</header>
+													<p>The popular Tic-Tac-Toe game made with AngularJS and Bootstrap. Feel free to take a look and have fun playing it! Just make sure to bring someone else with you, so you don't have to play alone.</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="https://jackx201.github.io/TicTacToe_Angular/" class="button alt">Let's play!</a></li>
+														</ul>
+													</footer>
+												</section>
+											</div>
+											<div class="col-4 col-6-medium col-12-small">
+												<section class="box">
+													<a href="projects.html" class="image featured"><img src="images/moreprojects.jpg" alt="" /></a>
+													<header>
+														<h3>Other Projects</h3>
+													</header>
+													<p>Take a look to all the other applications I've done. Not all of them will have a live demo like the ones you saw in this section, but you'll be able to see the source code and know how they work.</p>
+													<footer>
+														<ul class="actions">
+															<li><a href="projects.html" class="button alt">More projects</a></li>
 														</ul>
 													</footer>
 												</section>
