--- a/biography.html
+++ b/biography.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>About me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/favicon.ico" type="image/icon type">
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
@@ -18,7 +19,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">About me</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
