--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Dopetrope by HTML5 UP</title>
+		<title>My projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/favicon.ico" type="image/icon type">
 	</head>
 	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
